--- a/index.html
+++ b/index.html
@@ -175,9 +175,11 @@
                     </div>
                 </div>
             </div>
-            <div class="box">
-                <img src="assets\tellthewolvesimhome 1 (8).png" alt="">
-                <div class="details">
+            <div class="box lastbook">
+                <a href="books.html">
+                    <img src="assets\tellthewolvesimhome 1 (8).png" alt="">
+                </a>
+                <div class="details ">
                     <div class="author-title">
                         <p class="author">Alan Trotter</p>
                         <p class="title">Muscle</p>
@@ -198,9 +200,9 @@
     <div class="social">
         <div><img class="logo" src="assets/logo (1).png" alt=""></div>
         <div class="social-icons">
-            <a href="">Instagram</a>
-            <a href="">Facebook</a>
-            <a href="">Twitter</a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
         </div>
     </div>
     <div class="copyright">
